<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="LOADER_RS4_VAR" Id="{d467fca7-bc95-4d2c-8aa8-d6eae6ca505e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

LOADER_RS4_INPUT AT %IB32 : ARRAY [0..15] OF WORD; 
LOADER_RS4_INPUT_1 AT %IB33 : ARRAY [0..15] OF WORD;
LOADER_RS4_INPUT_2 AT %IB36 : ARRAY [0..15] OF WORD;
LOADER_RS4_INPUT_3 AT %IB37 : ARRAY [0..15] OF WORD;
LOADER_RS4_OUTPUT AT %QB32 : ARRAY [0..15] OF WORD;
LOADER_RS4_OUTPUT_1 AT %QB33 : ARRAY [0..15] OF WORD;
LOADER_RS4_OUTPUT_2 AT %QB34 : BYTE :=1;
LOADER_RS4_OUTPUT_3 AT %QB35 : BYTE :=2;
LOADER_RS4_OUTPUT_4 AT %QB36 : BYTE :=3;
LOADER_RS4_OUTPUT_5 AT %QB37 : BYTE :=4;
CARRIER_INDEX AT %QB38 : BYTE ;

I_LOADER_RS4_READY  AT %IX32.0 :BOOL;
I_LOADER_RS4_RUNNING  AT %IX32.1 :BOOL;
I_LOADER_RS4_PAUSED  AT %IX32.2 :BOOL;
I_LOADER_RS4_ERROR  AT %IX32.3 :BOOL;
I_LOADER_RS4_ESTOPON  AT %IX32.4 :BOOL;
I_LOADER_RS46_SAFEGUARDON  AT %IX32.5 :BOOL;
I_LOADER_RS4_SERROR  AT %IX32.6 :BOOL;
I_LOADER_RS4_WARNING  AT %IX32.7 :BOOL;

I_LOADER_RS4_MOTORON  AT %IX33.0 :BOOL;
I_LOADER_RS4_ATHOME  AT %IX33.1 :BOOL;
I_LOADER_RS4_AUTOMODE  AT %IX33.5 :BOOL;
	
I_LOADER_RS4_END_CYCLE  AT %IX37.0 :BOOL;
I_LOADER_RS4_END_FUKUDA  AT %IX37.1 :BOOL;
I_LOADER_RS4_READY_TAKEUP  AT %IX37.2 :BOOL;//CYCLE RUNNING INDICATOR
I_LOADER_RS4_START_TAKEUP  AT %IX37.3 :BOOL;
I_LOADER_RS4_READY_PLACING  AT %IX37.4 :BOOL;
I_LOADER_RS4_START_PLACING  AT %IX37.5 :BOOL;
	
	O_LOADER_RS4_START AT %QX32.0  : BOOL;	
	O_LOADER_RS4_SELECT_FUKUDA_A AT %QX32.1  : BOOL;
	O_LOADER_RS4_SELECT_FUKUDA_B AT %QX32.2  : BOOL;
	O_LOADER_RS4_STOP AT %QX32.4  : BOOL;
	O_LOADER_RS4_PAUSE AT %QX32.5  : BOOL;
	O_LOADER_RS4_CONTINUE AT %QX32.6  : BOOL;
	O_LOADER_RS4_RESET AT %QX32.7  : BOOL;	
	
	O_LOADER_RS4_SETMOTORON AT %QX33.0  : BOOL;
	O_LOADER_RS4_SETMOTOROFF AT %QX33.1  : BOOL;
	O_LOADER_RS4_HOME AT %QX33.2  : BOOL;

I_LOADER_RS4_GRIPPER_CLOSE_1 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_CLOSE_2 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_CLOSE_3 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_CLOSE_4 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_OPEN_1 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_OPEN_2 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_OPEN_3 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_OPEN_4 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_DOWN_1 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_DOWN_2 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_DOWN_3 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_DOWN_4 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_UP_1 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_UP_2 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_UP_3 AT %I* : BOOL;
I_LOADER_RS4_GRIPPER_EXT_UP_4 AT %I* : BOOL;

O_LOADER_RS4_GRIPPER_CLOSE_1 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_CLOSE_2 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_CLOSE_3 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_CLOSE_4 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_OPEN_1 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_OPEN_2 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_OPEN_3 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_OPEN_4 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_DOWN_1 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_DOWN_2 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_DOWN_3 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_DOWN_4 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_UP_1 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_UP_2 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_UP_3 AT %Q* : BOOL;
O_LOADER_RS4_GRIPPER_EXT_UP_4 AT %Q* : BOOL;

IX_LOADER_RS4_GRIPPER_1 AT %IX36.0 : BOOL;
IX_LOADER_RS4_GRIPPER_2 AT %IX36.1 : BOOL;
IX_LOADER_RS4_GRIPPER_3 AT %IX36.2 : BOOL;
IX_LOADER_RS4_GRIPPER_4 AT %IX36.3 : BOOL;

IX_LOADER_RS4_GRIPPER_EXT_1 AT %IX36.4 : BOOL;
IX_LOADER_RS4_GRIPPER_EXT_2 AT %IX36.5 : BOOL;
IX_LOADER_RS4_GRIPPER_EXT_3 AT %IX36.6 : BOOL;
IX_LOADER_RS4_GRIPPER_EXT_4 AT %IX36.7 : BOOL;

(*
OX_LOADER_RS4_GRIPPER_1 AT %QX69.0 : BOOL;
OX_LOADER_RS4_GRIPPER_2 AT %QX69.1 : BOOL;
OX_LOADER_RS4_GRIPPER_3 AT %QX69.2 : BOOL;
OX_LOADER_RS4_GRIPPER_4 AT %QX69.3 : BOOL;

OX_LOADER_RS4_GRIPPER_EXT_1 AT %QX69.4 : BOOL;
OX_LOADER_RS4_GRIPPER_EXT_2 AT %QX69.5 : BOOL;
OX_LOADER_RS4_GRIPPER_EXT_3 AT %QX69.6 : BOOL;
OX_LOADER_RS4_GRIPPER_EXT_4 AT %QX69.7 : BOOL;
*)

IX_LOADER_RS4_HOME AT %I* : BOOL;
IX_LOADER_RS4_RUNNING AT %I* : BOOL;
IX_LOADER_RS4_PICKUP_1 AT %I* : BOOL;
IX_LOADER_RS4_PICKUP_2 AT %I* : BOOL;
IX_LOADER_RS4_PICKUP_3 AT %I* : BOOL;
IX_LOADER_RS4_PICKUP_4 AT %I* : BOOL;
IX_LOADER_RS4_PLACING_1 AT %I* : BOOL;
IX_LOADER_RS4_PLACING_2 AT %I* : BOOL;
IX_LOADER_RS4_PLACING_3 AT %I* : BOOL;
IX_LOADER_RS4_PLACING_4 AT %I* : BOOL;

IX_LOADER_RS4_FINISH AT %I* : BOOL;
I_LOADER_RS4_HANG :BOOL;
I_LOADER_RS4_END_CARRIER :BOOL;
I_LOADER_RS4_ENABLE :BOOL;
I_LOADER_RS4_DISABLE :BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>