<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="LOADER_RS4" Id="{c98cbcef-c336-4bfc-8790-c7542f749e6f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM LOADER_RS4
VAR

	TMR10: TON;
	TMR8: TON;
	TMR9: TON;
	TMR7: TON;
	TMR3: TON;
	POSITION_CHANGED: BOOL;
	START_MOVE: TP;
	TMR1: TON;
	TP2: TP;
	START_ROBOT: TP;
	TMR2: TON;
	GO_ROBOT: BOOL;
	TP_COUNT: R_TRIG;
	CNT_INC: CTU;
	VAL: INT;
	ROT_START:R_TRIG;
	RESET_POSITION: BOOL;
	RES_POS: TON;
	CNT_CYCLE: CTU;
	START_ROTATE: R_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF LOADER_RS4_VAR.I_LOADER_RS4_ENABLE THEN
IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_1 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_1:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_1:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_1:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_1:=TRUE;
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_2 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_2:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_2:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_2:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_2:=TRUE;
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_3 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_3:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_3:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_3:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_3:=TRUE;
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_4 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_4:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_4:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_CLOSE_4:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_OPEN_4:=TRUE;
END_IF

IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_1 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_1:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_1:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_1:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_1:=TRUE;
END_IF


IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_2 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_2:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_2:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_2:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_2:=TRUE;
END_IF


IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_3 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_3:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_3:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_3:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_3:=TRUE;
END_IF


IF LOADER_RS4_VAR.IX_LOADER_RS4_GRIPPER_EXT_4 THEN
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_4:=TRUE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_4:=FALSE;
ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_DOWN_4:=FALSE;
	LOADER_RS4_VAR.O_LOADER_RS4_GRIPPER_EXT_UP_4:=TRUE;
END_IF


CARRIER_INDEX:=INDEXING_2_VAR.CARRIER_INDEX;
LOADER_RS4_VAR.O_LOADER_RS4_SETMOTORON:=TRUE;
TMR1(IN:=LOADER_RS4_VAR.O_LOADER_RS4_SETMOTORON ,PT:=T#0.5S);
IF TMR1.Q THEN
	TP2(IN:=TMR1.Q,PT:=T#1S);
	LOADER_RS4_VAR.O_LOADER_RS4_STOP:=TP2.Q;
END_IF
IF LOADER_RS4_VAR.O_LOADER_RS4_SETMOTORON AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INDEXING_1_VAR.I_INDEXING_1_HOME THEN
	IF LOADER_RS4_VAR.I_LOADER_RS4_READY OR LOADER_RS4_VAR.I_LOADER_RS4_RUNNING THEN
//EROOR OVERRIDE
		IF LOADER_RS4_VAR.I_LOADER_RS4_ERROR THEN
			TMR10(IN:=LOADER_RS4_VAR.I_LOADER_RS4_ERROR,PT:=T#1S);
			IF TMR10.Q THEN
				LOADER_RS4_VAR.O_LOADER_RS4_RESET :=TRUE;	
			ELSE
				LOADER_RS4_VAR.O_LOADER_RS4_RESET :=FALSE;
			END_IF
		END_IF 

		TMR8(IN:=INPUT_G6_VAR.O_G6_SELECT_FUKUDA_A,PT:=T#5S);
		TMR9(IN:=INPUT_G6_VAR.O_G6_START,PT:=T#2S);
		
//START FOR 1ST TIME			
		IF LOADER_RS4_VAR.I_LOADER_RS4_READY AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ERROR AND NOT LOADER_RS4_VAR.I_LOADER_RS4_RUNNING THEN
			TMR7(IN:=INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE,PT:=T#1S);
			START_ROBOT(IN:=TMR7.Q,PT:=T#3S);
			LOADER_RS4_VAR.O_LOADER_RS4_START :=TMR7.Q;
			RESET_POSITION:=TRUE;
		ELSE
			TMR7(IN:=FALSE);
		END_IF
			IF LOADER_RS4_VAR.I_LOADER_RS4_RUNNING AND LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP THEN
			LOADER_RS4_VAR.O_LOADER_RS4_START :=FALSE ;
		END_IF
		
//STOP
		IF LOADER_RS4_VAR.I_LOADER_RS4_END_FUKUDA AND NOT LOADER_RS4_VAR.I_LOADER_RS4_READY AND NOT LOADER_RS4_VAR.I_LOADER_RS4_RUNNING THEN
			TMR8(IN:=FALSE);
			TMR9(IN:=FALSE);
			LOADER_RS4_VAR.O_LOADER_RS4_STOP :=TRUE;
		END_IF
			TMR2(IN:=LOADER_RS4_VAR.O_LOADER_RS4_STOP,PT:=T#1S);
		IF TMR2.Q THEN
			LOADER_RS4_VAR.I_LOADER_RS4_HANG:=FALSE;
			LOADER_RS4_VAR.O_LOADER_RS4_STOP:=FALSE;
			TMR1(IN:=FALSE);
		END_IF	
			
//CONTINUE
		//GO_ROBOT:=LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP AND INPUT_G6_VAR.I_G6_READY_PLACING AND INDEXING_2_VAR.O_ROTATION_DONE AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE;
		IF LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP AND INPUT_G6_VAR.I_G6_READY_PLACING AND INDEXING_2_VAR.O_ROTATION_DONE AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE THEN
			GO_ROBOT:=TRUE;
		END_IF
		IF LOADER_RS4_VAR.I_LOADER_RS4_RUNNING AND GO_ROBOT AND NOT LOADER_RS4_VAR.I_LOADER_RS4_READY AND INDEXING_2_VAR.I_INDEXING_2_HOME AND INDEXING_2_VAR.O_ROTATION_DONE THEN
			//TMR3(IN:=GO_ROBOT,PT:=T#0.5S); 
			TMR3(IN:=TRUE,PT:=T#0.5S); 
			POSITION_CHANGED :=FALSE;
		ELSE
			TMR3(IN:=FALSE);
			INDEXING_1_VAR.O_ROTATION_START:=FALSE;	
		END_IF
		LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=TMR3.q;
		IF TMR3.Q AND NOT LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INPUT_VAR.STRAIGHTEN_DONE AND INDEXING_2_VAR.I_INDEXING_2_HOME AND INDEXING_2_VAR.O_ROTATION_DONE  THEN
			IF LOADER_RS4_VAR.LOADER_RS4_OUTPUT_5 <=68  THEN
				POSITION_CHANGED :=TRUE;
			ELSE
				POSITION_CHANGED :=FALSE;
			END_IF	
		END_IF	

		IF ( LOADER_RS4_VAR.I_LOADER_RS4_READY_PLACING OR START_MOVE.Q OR GO_ROBOT)AND NOT LOADER_RS4_VAR.I_LOADER_RS4_READY THEN
			LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=TRUE;
		ELSE
			LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=FALSE;
		END_IF
	
//END CARRIER		
		IF LOADER_RS4_VAR.LOADER_RS4_OUTPUT_5 >=68 AND LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP THEN
			ROT_START(CLK:=TRUE);
			INDEXING_2_VAR.O_ROTATION_START:=ROT_START.Q;
			//LOADER_RS4_VAR.O_LOADER_RS4_STOP :=ROT_START.Q;
			 RESET_POSITION:=LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER;
			LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER:=TRUE;
			ELSE
			ROT_START(CLK:=FALSE);
		END_IF
		
		CNT_INC(CU:=LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP,RESET:= RESET_POSITION,PV:=17);
		LOADER_RS4_VAR.LOADER_RS4_OUTPUT_2:=(WORD_TO_BYTE(CNT_INC.CV)*4)+1 ;
		LOADER_RS4_VAR.LOADER_RS4_OUTPUT_3:=LOADER_RS4_VAR.LOADER_RS4_OUTPUT_2+1 ;
		LOADER_RS4_VAR.LOADER_RS4_OUTPUT_4:=LOADER_RS4_VAR.LOADER_RS4_OUTPUT_3+1 ;
		LOADER_RS4_VAR.LOADER_RS4_OUTPUT_5:=LOADER_RS4_VAR.LOADER_RS4_OUTPUT_4+1 ;
		START_MOVE (IN:=POSITION_CHANGED,PT:=T#0.1S);
	
		IF RESET_POSITION THEN
			RES_POS(IN:=RESET_POSITION,PT:=T#0.5S);
			LOADER_RS4_VAR.LOADER_RS4_OUTPUT_2:=1;
			LOADER_RS4_VAR.LOADER_RS4_OUTPUT_3:=2;
			LOADER_RS4_VAR.LOADER_RS4_OUTPUT_4:=3;
			LOADER_RS4_VAR.LOADER_RS4_OUTPUT_5:=4;
			IF RES_POS.Q THEN
				RESET_POSITION:=FALSE;
				RES_POS(IN:=FALSE);			
			END_IF
		END_IF
		IF NOT SORTER_RS4_VAR.I_SORTER_RS4_ENABLE THEN
			INDEXING_2_VAR.O_ROTATION_START:=LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER;
		END_IF
			
		CNT_CYCLE(CU:=INDEXING_2_VAR.O_ROTATION_DONE,RESET:=SORTER_RS4_VAR.I_SORTER_RS4_DISABLE,PV:=100);
		IF CNT_CYCLE.CV >=2 THEN
				IF INDEXING_2_VAR.O_ROTATION_DONE THEN
				SORTER_RS4_VAR.I_SORTER_RS4_ENABLE:=TRUE;
			END_IF
		END_IF
		
		IF LOADER_RS4_VAR.I_LOADER_RS4_START_PLACING AND INPUT_G6_VAR.I_G6_START_TAKEUP THEN
			INDEXING_1_VAR.O_ROTATION_START:=TRUE;
			
		END_IF
		IF LOADER_RS4_VAR.I_LOADER_RS4_READY_PLACING THEN
			GO_ROBOT:=FALSE;
		END_IF
		(*
		IF NOT CNT_CYCLE.Q AND LOADER_RS4_VAR.I_LOADER_RS4_END_CYCLE THEN
			START_ROTATE(CLK:=TRUE);
			INDEXING_2_VAR.O_ROTATION_START:= START_ROTATE.Q;	
			ELSE
			START_ROTATE(CLK:=FALSE);
		END_IF
					SORTER_RS4_VAR.I_SORTER_RS4_ENABLE:=TRUE;
		*)
	END_IF
END_IF


ELSE
	LOADER_RS4_VAR.O_LOADER_RS4_STOP:=TRUE;
	IF LOADER_RS4_VAR.I_LOADER_RS4_READY THEN
		LOADER_RS4_VAR.O_LOADER_RS4_SETMOTORON:=FALSE;
	END_IF
END_IF




]]></ST>
    </Implementation>
    <LineIds Name="LOADER_RS4">
      <LineId Id="734" Count="0" />
      <LineId Id="322" Count="1" />
      <LineId Id="326" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="327" Count="1" />
      <LineId Id="324" Count="0" />
      <LineId Id="329" Count="26" />
      <LineId Id="357" Count="3" />
      <LineId Id="356" Count="0" />
      <LineId Id="361" Count="26" />
      <LineId Id="392" Count="0" />
      <LineId Id="731" Count="2" />
      <LineId Id="501" Count="4" />
      <LineId Id="402" Count="2" />
      <LineId Id="508" Count="3" />
      <LineId Id="513" Count="1" />
      <LineId Id="512" Count="0" />
      <LineId Id="486" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="411" Count="1" />
      <LineId Id="548" Count="0" />
      <LineId Id="522" Count="0" />
      <LineId Id="419" Count="1" />
      <LineId Id="515" Count="0" />
      <LineId Id="488" Count="0" />
      <LineId Id="490" Count="0" />
      <LineId Id="421" Count="1" />
      <LineId Id="500" Count="0" />
      <LineId Id="517" Count="2" />
      <LineId Id="424" Count="0" />
      <LineId Id="521" Count="0" />
      <LineId Id="428" Count="3" />
      <LineId Id="494" Count="0" />
      <LineId Id="433" Count="0" />
      <LineId Id="524" Count="4" />
      <LineId Id="530" Count="0" />
      <LineId Id="529" Count="0" />
      <LineId Id="546" Count="0" />
      <LineId Id="868" Count="2" />
      <LineId Id="434" Count="1" />
      <LineId Id="484" Count="0" />
      <LineId Id="455" Count="0" />
      <LineId Id="438" Count="5" />
      <LineId Id="598" Count="0" />
      <LineId Id="653" Count="0" />
      <LineId Id="666" Count="0" />
      <LineId Id="668" Count="0" />
      <LineId Id="657" Count="0" />
      <LineId Id="720" Count="5" />
      <LineId Id="727" Count="0" />
      <LineId Id="726" Count="0" />
      <LineId Id="669" Count="1" />
      <LineId Id="694" Count="1" />
      <LineId Id="704" Count="1" />
      <LineId Id="728" Count="1" />
      <LineId Id="671" Count="0" />
      <LineId Id="692" Count="0" />
      <LineId Id="647" Count="0" />
      <LineId Id="661" Count="0" />
      <LineId Id="663" Count="2" />
      <LineId Id="444" Count="0" />
      <LineId Id="550" Count="0" />
      <LineId Id="499" Count="0" />
      <LineId Id="706" Count="0" />
      <LineId Id="715" Count="3" />
      <LineId Id="708" Count="1" />
      <LineId Id="719" Count="0" />
      <LineId Id="710" Count="0" />
      <LineId Id="699" Count="0" />
      <LineId Id="766" Count="1" />
      <LineId Id="810" Count="1" />
      <LineId Id="807" Count="1" />
      <LineId Id="769" Count="0" />
      <LineId Id="839" Count="0" />
      <LineId Id="813" Count="1" />
      <LineId Id="809" Count="0" />
      <LineId Id="864" Count="2" />
      <LineId Id="871" Count="0" />
      <LineId Id="867" Count="0" />
      <LineId Id="872" Count="0" />
      <LineId Id="897" Count="1" />
      <LineId Id="771" Count="5" />
      <LineId Id="780" Count="0" />
      <LineId Id="806" Count="0" />
      <LineId Id="698" Count="0" />
      <LineId Id="448" Count="0" />
      <LineId Id="737" Count="6" />
      <LineId Id="736" Count="0" />
      <LineId Id="449" Count="0" />
      <LineId Id="735" Count="0" />
      <LineId Id="401" Count="0" />
      <LineId Id="399" Count="0" />
      <LineId Id="394" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="781" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>